package observerMethod;

public interface Observer {
    void update();
}
